cmake_minimum_required(VERSION 2.8.4)
project(Rayne-Modules)

option(BUILD_METAL_MODULE "Build the Metal renderer module" ON)
option(BUILD_D3D12_MODULE "Build the DirectX12 renderer module" ON)
option(BUILD_VULKAN_MODULE "Build the Vulkan renderer module" ON)
option(BUILD_ASSIMP_MODULE "Build the Assimp module" ON)
option(BUILD_OCULUS_MODULE "Build the Oculus module" ON)
option(BUILD_OPENVR_MODULE "Build the OpenVR module" ON)
option(BUILD_BULLET_MODULE "Build the Bullet physics module" ON)
option(BUILD_OGG_MODULE "Build the ogg audio file module" ON)
option(BUILD_OPENAL_MODULE "Build the OpenAL audio module" ON)
option(BUILD_STEAMAUDIO_MODULE "Build the Steam Audio module" ON)
option(BUILD_ENET_MODULE "Build the ENet module" ON)

if(APPLE AND ${BUILD_METAL_MODULE})
    add_subdirectory("Metal")
endif()
if(MSVC AND ${BUILD_D3D12_MODULE})
    add_subdirectory("D3D12")
endif()
if(((WIN32 OR UNIX) AND NOT APPLE) AND ${BUILD_VULKAN_MODULE})
    add_subdirectory("Vulkan")
endif()

if(${BUILD_ASSIMP_MODULE})
    add_subdirectory("Assimp")
endif()

if(${BUILD_BULLET_MODULE})
    add_subdirectory("Bullet")
endif()

if(${BUILD_OGG_MODULE})
    add_subdirectory("ogg")
endif()

if(${BUILD_OPENAL_MODULE})
    add_subdirectory("OpenAL")
endif()

if(${BUILD_STEAMAUDIO_MODULE})
    add_subdirectory("SteamAudio")
endif()

if(${BUILD_ENET_MODULE})
    add_subdirectory("ENet")
endif()

if((MSVC AND ${BUILD_OCULUS_MODULE}) OR ${BUILD_OPENVR_MODULE})
	add_subdirectory("VRWrapper")
endif()

if(MSVC AND ${BUILD_OCULUS_MODULE})
    add_subdirectory("Oculus")
endif()

if(${BUILD_OPENVR_MODULE})
    add_subdirectory("OpenVR")
endif()
