cmake_minimum_required(VERSION 2.8.4)
project(Rayne-Modules)

option(RN_BUILD_METAL_MODULE "Build the Metal renderer module" ON)
option(RN_BUILD_D3D12_MODULE "Build the DirectX12 renderer module" ON)
option(RN_BUILD_VULKAN_MODULE "Build the Vulkan renderer module" ON)
option(RN_BUILD_ASSIMP_MODULE "Build the Assimp module" ON)
option(RN_BUILD_OCULUS_MODULE "Build the Oculus module" OFF)
option(RN_BUILD_OCULUSMOBILE_MODULE "Build the Oculus GearVR module" OFF)
option(RN_BUILD_OPENVR_MODULE "Build the OpenVR module" OFF)
option(RN_BUILD_BULLET_MODULE "Build the Bullet physics module" ON)
option(RN_BUILD_PHYSX_MODULE "Build the PhysX physics module" OFF)
option(RN_BUILD_SPLASH_MODULE "Build the Splash physics module" OFF)
option(RN_BUILD_ODE_MODULE "Build the ODE physics module" OFF)
option(RN_BUILD_NEWTON_MODULE "Build the Newton Game Dynamics physics module" OFF)
option(RN_BUILD_OGG_MODULE "Build the ogg audio file module" ON)
option(RN_BUILD_OPENAL_MODULE "Build the OpenAL audio module" ON)
option(RN_BUILD_STEAMAUDIO_MODULE "Build the Steam Audio module" OFF)
option(RN_BUILD_ENET_MODULE "Build the ENet module" OFF)
option(RN_BUILD_RECAST_MODULE "Build the Recast navmesh module" OFF)

if(APPLE AND ${RN_BUILD_METAL_MODULE})
    add_subdirectory("Metal")
endif()
if(MSVC AND ${RN_BUILD_D3D12_MODULE})
    add_subdirectory("D3D12")
endif()
if(((WIN32 OR UNIX) AND NOT APPLE) AND ${RN_BUILD_VULKAN_MODULE})
    add_subdirectory("Vulkan")
endif()

if(${RN_BUILD_ASSIMP_MODULE})
    add_subdirectory("Assimp")
endif()

if(${RN_BUILD_BULLET_MODULE})
    add_subdirectory("Bullet")
endif()

if(${RN_BUILD_PHYSX_MODULE})
    add_subdirectory("PhysX")
endif()

if(${RN_BUILD_SPLASH_MODULE})
    add_subdirectory("Splash")
endif()

if(${RN_BUILD_ODE_MODULE})
    add_subdirectory("ODE")
endif()

if(${RN_BUILD_NEWTON_MODULE})
    add_subdirectory("Newton")
endif()

if(${RN_BUILD_OGG_MODULE})
    add_subdirectory("ogg")
endif()

if(${RN_BUILD_OPENAL_MODULE})
    add_subdirectory("OpenAL")
endif()

if(${RN_BUILD_STEAMAUDIO_MODULE})
    add_subdirectory("SteamAudio")
endif()

if(${RN_BUILD_ENET_MODULE})
    add_subdirectory("ENet")
endif()

if(${RN_BUILD_RECAST_MODULE})
    add_subdirectory("Recast")
endif()

if((MSVC AND ${RN_BUILD_OCULUS_MODULE}) OR ${RN_BUILD_OPENVR_MODULE} OR (ANDROID AND ${RN_BUILD_OCULUSMOBILE_MODULE}))
	add_subdirectory("VRWrapper")
endif()

if(MSVC AND ${RN_BUILD_OCULUS_MODULE})
    add_subdirectory("Oculus")
endif()

if(ANDROID AND ${RN_BUILD_OCULUSMOBILE_MODULE})
    add_subdirectory("OculusMobile")
endif()

if((MSVC OR APPLE) AND ${RN_BUILD_OPENVR_MODULE})
    add_subdirectory("OpenVR")
endif()
